gitops/overlays/garu-home/oauth2-proxy/ingress.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: oauth2-proxy-oauth-garu-me
  namespace: oauth2-proxy
spec:
  hostnames:
    - oauth.garu.me
  parentRefs:
    - name: garu-me
      namespace: traefik
      sectionName: websecure
  rules:
    - backendRefs:
        - name: oauth2-proxy
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
      name: rule-0
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: oauth2-proxy-oauth-garu-me-http
  namespace: oauth2-proxy
spec:
  hostnames:
    - oauth.garu.me
  parentRefs:
    - name: garu-me
      namespace: traefik
      sectionName: web
  rules:
    - filters:
        - requestRedirect:
            scheme: https
            statusCode: 308
          type: RequestRedirect
      matches:
        - path:
            type: PathPrefix
            value: /
